--- a/digital-agency-design-system-vue/index.html
+++ b/digital-agency-design-system-vue/index.html
@@ -7,7 +7,7 @@
     <title>Vite + Vue + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="scrollbar-gutter"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
