--- a/digital-agency-design-system-vue/index.html
+++ b/digital-agency-design-system-vue/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
   </head>
-  <body>
+  <body class="color-scheme-light">
     <div id="app" class="scrollbar-gutter"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
